feat: make enrollment service return data as stream